WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246061
[Outline] BorderPainter functions should not take RenderStyle
https://bugs.webkit.org/show_bug.cgi?id=246061
Summary
[Outline] BorderPainter functions should not take RenderStyle
alan
Reported
2022-10-04 19:56:03 PDT
ssia
Attachments
Patch
(17.13 KB, patch)
2022-10-05 08:17 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-10-05 08:17:33 PDT
Created
attachment 462811
[details]
Patch
EWS
Comment 2
2022-10-06 11:21:18 PDT
Committed
255230@main
(a5cee42b3ed7): <
https://commits.webkit.org/255230@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 462811
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-10-06 11:22:19 PDT
<
rdar://problem/100862251
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug