[Outline] BorderPainter functions should not take RenderStyle https://bugs.webkit.org/show_bug.cgi?id=246061

Reviewed by Antti Koivisto.

This is in preparation for supporting outline with border-radius.
(This patch ensures that BorderPainter functions do not try to consult RenderStyle for border related style information. It enables us to use these functions for both border and outline painting.)

* Source/WebCore/rendering/BorderPainter.cpp:
(WebCore::BorderPainter::paintBorder):
(WebCore::BorderPainter::paintSides):
(WebCore::BorderPainter::paintTranslucentBorderSides):
(WebCore::BorderPainter::paintBorderSides):
(WebCore::BorderPainter::paintOneBorderSide):
(WebCore::BorderPainter::drawBoxSideFromPath):
* Source/WebCore/rendering/BorderPainter.h:

Canonical link: https://commits.webkit.org/255230@main